@@ -80,6 +80,13 @@ ifeq (,$(filter nodocs,$(DEB_BUILD_OPTIONS)))
 	dh_installdocs -pipython-qtconsole --link-doc=ipython
 	dh_installdocs -pipython-doc --link-doc=ipython
 	find $(CURDIR)/debian/ipython -type d -empty -delete
+
+	rm -f $(CURDIR)/debian/ipython-doc/usr/share/doc/ipython/html/_images/ms_visual_studio.png
+	dh_link -pipython-doc usr/share/doc/ipython/html/_static/ms_visual_studio.png \
+	  usr/share/doc/ipython/html/_images/ms_visual_studio.png
+	rm -f $(CURDIR)/debian/ipython-doc/usr/share/doc/ipython/html/_images/qtconsole.png
+	dh_link -pipython-doc usr/share/doc/ipython/html/_static/qtconsole.png \
+	  usr/share/doc/ipython/html/_images/qtconsole.png
 endif
 
 override_dh_installexamples:
